force-app/main/default/objects/DailyDispatch__c/DailyDispatch__c.object-meta.xml
<CustomObject>
    <label>Daily Dispatch</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Dispatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>