force-app/main/default/objects/DailyDispatch__c/fields/Agency_Loader_1__c.field-meta.xml
<CustomField>
    <fullName>Agency_Loader_1__c</fullName>
    <description>Used to say if Loader number 1 is an agency loader, and which agency was used. If no loader or FM loader used, select No.</description>
    <inlineHelpText>Used to say if Loader number 1 is an agency loader, and which agency was used. If no loader or FM loader used, select No.</inlineHelpText>
    <label>Agency Loader 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Extrastaff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>