force-app/main/default/objects/DailyDispatch__c/fields/Already_Created__c.field-meta.xml
<CustomField>
    <fullName>Already_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Created</label>
    <type>Checkbox</type>
</CustomField>