force-app/main/default/objects/DailyDispatch__c/fields/Bin_Weighing__c.field-meta.xml
<CustomField>
    <fullName>Bin_Weighing__c</fullName>
    <formula>IF(RoundId__r.Bin_Weighing__c ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bin Weighing</label>
    <type>Checkbox</type>
</CustomField>