force-app/main/default/objects/DailyDispatch__c/fields/Calculated_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Overtime__c</fullName>
    <formula>MAX(Round_Duration__c - (RoundId__r.Shift_Length__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>