force-app/main/default/objects/DailyDispatch__c/fields/calcvehicle__c.field-meta.xml
<CustomField>
    <fullName>calcvehicle__c</fullName>
    <formula>IF(ISBLANK(Vehicle__c),  Default_Vehicle__c, Vehicle__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>calcvehicle</label>
    <type>Text</type>
</CustomField>