force-app/main/default/objects/DailyDispatch__c/fields/Default_Driver_2__c.field-meta.xml
<CustomField>
    <fullName>Default_Driver_2__c</fullName>
    <label>Default Driver 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>