force-app/main/default/objects/DailyDispatch__c/fields/Default_Driver__c.field-meta.xml
<CustomField>
    <fullName>Default_Driver__c</fullName>
    <formula>RoundId__r.Default_Driver_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Driver</label>
    <type>Text</type>
</CustomField>