force-app/main/default/objects/DailyDispatch__c/fields/Default_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Default_Vehicle__c</fullName>
    <formula>RoundId__r.Default_Vehicle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Vehicle</label>
    <type>Text</type>
</CustomField>