force-app/main/default/objects/DailyDispatch__c/fields/DieselPumped__c.field-meta.xml
<CustomField>
    <fullName>DieselPumped__c</fullName>
    <label>DieselPumped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>