force-app/main/default/objects/DailyDispatch__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Dispatch Date</label>
    <type>Date</type>
</CustomField>