force-app/main/default/objects/DailyDispatch__c/fields/Dispatch_Delay__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Delay__c</fullName>
    <inlineHelpText>Use to input if the round is cancelled or significantly delayed.</inlineHelpText>
    <label>Dispatch Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed more than 2 hours</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Covering an extra round</fullName>
            </value>
            <value>
                <fullName>Covered by untrained driver (spares excluded)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>