force-app/main/default/objects/DailyDispatch__c/fields/DriverArrived__c.field-meta.xml
<CustomField>
    <fullName>DriverArrived__c</fullName>
    <label>DriverArrived</label>
    <type>DateTime</type>
</CustomField>