force-app/main/default/objects/DailyDispatch__c/fields/DriverId__c.field-meta.xml
<CustomField>
    <fullName>DriverId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Daily Dispatches</relationshipLabel>
    <relationshipName>DailyRounds</relationshipName>
    <type>Lookup</type>
</CustomField>