force-app/main/default/objects/DailyDispatch__c/fields/DriverSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>DriverSatisfaction__c</fullName>
    <label>Driver Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>