force-app/main/default/objects/DailyDispatch__c/fields/EffectiveDriverName__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDriverName__c</fullName>
    <formula>IF(ISBLANK(DriverId__c), Default_Driver__c, DriverId__r.Name)</formula>
    <label>Effective Driver Name</label>
    <type>Text</type>
</CustomField>