force-app/main/default/objects/DailyDispatch__c/fields/EffectiveVehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>EffectiveVehicleNumber__c</fullName>
    <formula>IF(ISBLANK(Vehicle__c),  Default_Vehicle__c, Vehicle__r.Name)</formula>
    <label>Effective Vehicle Number</label>
    <type>Text</type>
</CustomField>