force-app/main/default/objects/DailyDispatch__c/fields/Enqix_DailyDispatch_Id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_DailyDispatch_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Enqix_DailyDispatch_Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>