force-app/main/default/objects/DailyDispatch__c/fields/ExtenalRoundId__c.field-meta.xml
<CustomField>
    <fullName>ExtenalRoundId__c</fullName>
    <formula>RoundId__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExtenalRoundId</label>
    <type>Text</type>
</CustomField>