force-app/main/default/objects/DailyDispatch__c/fields/Folder_Returned__c.field-meta.xml
<CustomField>
    <fullName>Folder_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folder Returned</label>
    <type>Checkbox</type>
</CustomField>