force-app/main/default/objects/DailyDispatch__c/fields/Food_Pod__c.field-meta.xml
<CustomField>
    <fullName>Food_Pod__c</fullName>
    <formula>RoundId__r.Food_Pod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food Pod?</label>
    <type>Checkbox</type>
</CustomField>