force-app/main/default/objects/DailyDispatch__c/fields/Get_Date__c.field-meta.xml
<CustomField>
    <fullName>Get_Date__c</fullName>
    <formula>DATE(VALUE(MID(Name, 2, 2)), VALUE(RIGHT(Name, 5)), VALUE(LEFT(Name, 4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Date</label>
    <type>Date</type>
</CustomField>