force-app/main/default/objects/DailyDispatch__c/fields/Is_foreign_round__c.field-meta.xml
<CustomField>
    <fullName>Is_foreign_round__c</fullName>
    <formula>CONTAINS( Name , &quot;FOREIGN&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is foreign round</label>
    <type>Checkbox</type>
</CustomField>