force-app/main/default/objects/DailyDispatch__c/fields/Loader__c.field-meta.xml
<CustomField>
    <fullName>Loader__c</fullName>
    <label>Loader</label>
    <length>50</length>
    <type>Text</type>
</CustomField>