force-app/main/default/objects/DailyDispatch__c/fields/Master_Round_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Round_ID__c</fullName>
    <formula>RoundId__r.Master_Round_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Round ID</label>
    <type>Text</type>
</CustomField>