force-app/main/default/objects/DailyDispatch__c/fields/Miley_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Miley_Data_Status__c</fullName>
    <label>Miley Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>Data collection in progress</fullName>
            </value>
            <value>
                <fullName>Ready for use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>