force-app/main/default/objects/DailyDispatch__c/fields/Num_Loaders__c.field-meta.xml
<CustomField>
    <fullName>Num_Loaders__c</fullName>
    <description>Counts num loaders. only counts text &gt;= 3 characters as short strings are often entered incorrectly.</description>
    <formula>IF(
  LEN(TRIM(Loader__c)) &gt; 3,
  1,
  0
)
+
IF(
  LEN(TRIM(X2nd_Loader__c)) &gt; 3,
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Loaders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>