force-app/main/default/objects/DailyDispatch__c/fields/Ops_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Ops_End_Time__c</fullName>
    <label>Ops End Time</label>
    <type>DateTime</type>
</CustomField>