force-app/main/default/objects/DailyDispatch__c/fields/Ops_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Ops_Start_Time__c</fullName>
    <label>Ops Start Time</label>
    <type>DateTime</type>
</CustomField>