force-app/main/default/objects/DailyDispatch__c/fields/Overtime_Manual__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Manual__c</fullName>
    <description>Manual Input of Overtime which will be paid. You need to enter an Overtime Reason as well.
Enter in decimal hours, eg 1 hour 30 mins is 1.5</description>
    <inlineHelpText>Manual Input of Overtime which will be paid. You need to enter an Overtime Reason as well.
Enter in decimal hours, eg 1 hour 30 mins is 1.5</inlineHelpText>
    <label>Overtime Manual (hrs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>