force-app/main/default/objects/DailyDispatch__c/fields/Overtime_Reason__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Reason__c</fullName>
    <description>Reason for overtime being paid. Must be entered if overtime value is entered.</description>
    <inlineHelpText>Reason for overtime being paid. Must be entered if overtime value is entered.</inlineHelpText>
    <label>Overtime Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extra Day</fullName>
            </value>
            <value>
                <fullName>Long Shift</fullName>
            </value>
            <value>
                <fullName>No Loader</fullName>
            </value>
            <value>
                <fullName>Covering 2 rounds</fullName>
            </value>
            <value>
                <fullName>Covering different round</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>