force-app/main/default/objects/DailyDispatch__c/fields/Round_Duration2__c.field-meta.xml
<CustomField>
    <fullName>Round_Duration2__c</fullName>
    <formula>TEXT(FLOOR( Round_Duration__c  / 60))
&amp;&apos;hr&apos;&amp; 
TEXT(MOD( Round_Duration__c  ,60))
&amp;&apos;min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>