force-app/main/default/objects/DailyDispatch__c/fields/Round_Duration__c.field-meta.xml
<CustomField>
    <fullName>Round_Duration__c</fullName>
    <formula>IF( ISBLANK(Ops_End_Time__c), 0,  (Ops_End_Time__c-  Ops_Start_Time__c) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>