force-app/main/default/objects/DailyDispatch__c/fields/Round_Notes__c.field-meta.xml
<CustomField>
    <fullName>Round_Notes__c</fullName>
    <formula>RoundId__r.Round_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Notes</label>
    <type>Text</type>
</CustomField>