force-app/main/default/objects/DailyDispatch__c/fields/Round_number__c.field-meta.xml
<CustomField>
    <fullName>Round_number__c</fullName>
    <formula>RoundId__r.RoundNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>