force-app/main/default/objects/DailyDispatch__c/fields/RoundId__c.field-meta.xml
<CustomField>
    <fullName>RoundId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Daily Dispatches</relationshipLabel>
    <relationshipName>DailyRounds</relationshipName>
    <type>Lookup</type>
</CustomField>