force-app/main/default/objects/DailyDispatch__c/fields/RoundStartTime__c.field-meta.xml
<CustomField>
    <fullName>RoundStartTime__c</fullName>
    <label>Round StartTime</label>
    <type>DateTime</type>
</CustomField>