force-app/main/default/objects/DailyDispatch__c/fields/RoutingJobId__c.field-meta.xml
<CustomField>
    <fullName>RoutingJobId__c</fullName>
    <externalId>true</externalId>
    <label>Routing Job Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>