force-app/main/default/objects/DailyDispatch__c/fields/RoutingResponse__c.field-meta.xml
<CustomField>
    <fullName>RoutingResponse__c</fullName>
    <label>Routing Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>