force-app/main/default/objects/DailyDispatch__c/fields/RoutingStatus__c.field-meta.xml
<CustomField>
    <fullName>RoutingStatus__c</fullName>
    <label>Routing Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RoutingStatus</valueSetName>
    </valueSet>
</CustomField>