force-app/main/default/objects/DailyDispatch__c/fields/RoutingSummary__c.field-meta.xml
<CustomField>
    <fullName>RoutingSummary__c</fullName>
    <label>Routing Summary</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>