force-app/main/default/objects/DailyDispatch__c/fields/Tablet_Number__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Number__c</fullName>
    <label>Tablet Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>