force-app/main/default/objects/DailyDispatch__c/fields/Tablet_Returned__c.field-meta.xml
<CustomField>
    <fullName>Tablet_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tablet Returned</label>
    <type>Checkbox</type>
</CustomField>