force-app/main/default/objects/DailyDispatch__c/fields/Total_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Total_Tonnage__c</fullName>
    <label>Total Tonnage</label>
    <summarizedField>Tonnage__c.Weight_kg__c</summarizedField>
    <summaryForeignKey>Tonnage__c.DailyDispatch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>