force-app/main/default/objects/DailyDispatch__c/fields/UnsequencedLocations__c.field-meta.xml
<CustomField>
    <fullName>UnsequencedLocations__c</fullName>
    <label>Unsequenced Locations</label>
    <summaryFilterItems>
        <field>DispatchLocation__c.SequenceNumber__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>DispatchLocation__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>