force-app/main/default/objects/DailyDispatch__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Daily Dispatches</relationshipLabel>
    <relationshipName>Daily_Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>