force-app/main/default/objects/DailyDispatch__c/fields/VehicleExternalId__c.field-meta.xml
<CustomField>
    <fullName>VehicleExternalId__c</fullName>
    <formula>if (isblank(Vehicle__r.External_Id__c),
RoundId__r.Default_Vehicle__r.External_Id__c,
Vehicle__r.External_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VehicleExternalId</label>
    <type>Text</type>
</CustomField>