force-app/main/default/objects/DailyDispatch__c/fields/WasKeyFolderTaken__c.field-meta.xml
<CustomField>
    <fullName>WasKeyFolderTaken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Folder Taken?</label>
    <type>Checkbox</type>
</CustomField>