force-app/main/default/objects/DailyDispatch__c/fields/X2nd_Loader__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Loader__c</fullName>
    <label>2nd Loader</label>
    <length>50</length>
    <type>Text</type>
</CustomField>