force-app/main/default/objects/DailyDispatch__c/fields/YESTERDAY__c.field-meta.xml
<CustomField>
    <fullName>YESTERDAY__c</fullName>
    <formula>TODAY() - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YESTERDAY</label>
    <type>Date</type>
</CustomField>