force-app/main/default/objects/DailyDispatch__c/validationRules/Overtime_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Overtime_Reason</fullName>
    <active>true</active>
    <description>Forces reason to be entered for overtime</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Overtime_Manual__c )),
ISPICKVAL( Overtime_Reason__c,&quot;&quot;)
)</errorConditionFormula>
    <errorMessage>You must input an Overtime reason to enter overtime value</errorMessage>
</ValidationRule>