force-app/main/default/objects/DailyDispatch__c/listViews/ALL_ROUNDS_COMPLETED_CLONE.listView-meta.xml
<ListView>
    <fullName>ALL_ROUNDS_COMPLETED_CLONE</fullName>
    <columns>NAME</columns>
    <columns>RoundId__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>Round_Duration__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Round_number__c</columns>
    <columns>DriverId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RoundStartTime__c</field>
        <operation>equals</operation>
        <value>7/27/2026 12:00 AM</value>
    </filters>
    <label>All Rounds Completed (Filters Edit)</label>
</ListView>