force-app/main/default/objects/DailyDispatch__c/listViews/All_Rounds_Completed_Last_2_Days.listView-meta.xml
<ListView>
    <fullName>All_Rounds_Completed_Last_2_Days</fullName>
    <columns>NAME</columns>
    <columns>RoundId__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>Round_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RoundStartTime__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <filters>
        <field>Ops_Start_Time__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Rounds Completed Last 2 Days</label>
</ListView>