force-app/main/default/objects/DailyDispatch__c/listViews/All_Rounds_Completed_Yesterday.listView-meta.xml
<ListView>
    <fullName>All_Rounds_Completed_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>RoundId__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>Round_Duration__c</columns>
    <columns>Already_Created__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RoundStartTime__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All Rounds Completed Yesterday</label>
</ListView>