force-app/main/default/objects/DailyDispatch__c/listViews/All_Rounds_Waiting_To_End.listView-meta.xml
<ListView>
    <fullName>All_Rounds_Waiting_To_End</fullName>
    <columns>NAME</columns>
    <columns>RoundId__c</columns>
    <columns>DriverId__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>DieselPumped__c</columns>
    <columns>Issues__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/26/2026 12:00 AM</value>
    </filters>
    <label>All Rounds Waiting to zEnd</label>
</ListView>