force-app/main/default/objects/DailyDispatch__c/listViews/All_Rounds_Waiting_to_Start_Ops.listView-meta.xml
<ListView>
    <fullName>All_Rounds_Waiting_to_Start_Ops</fullName>
    <columns>NAME</columns>
    <columns>Bin_Weighing__c</columns>
    <columns>Vehicle__c</columns>
    <columns>DriverId__c</columns>
    <columns>Loader__c</columns>
    <columns>X2nd_Loader__c</columns>
    <columns>Dispatch_Notes__c</columns>
    <columns>Tablet_Number__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>Agency_Loader_1__c</columns>
    <columns>Agency_Loader_2__c</columns>
    <columns>Total_Tonnage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/11/2026 12:00 AM</value>
    </filters>
    <label>All Rounds Waiting to Start (Ops)</label>
</ListView>