force-app/main/default/objects/DailyDispatch__c/listViews/BIRMINGHAM_TODAYS_DISPATCH.listView-meta.xml
<ListView>
    <fullName>BIRMINGHAM_TODAYS_DISPATCH</fullName>
    <columns>NAME</columns>
    <columns>Bin_Weighing__c</columns>
    <columns>Vehicle__c</columns>
    <columns>DriverId__c</columns>
    <columns>Loader__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>Tablet_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Birmingham</value>
    </filters>
    <label>BIRMINGHAM_TODAYS DISPATCH</label>
    <sharedTo>
        <group>Ops_Users</group>
    </sharedTo>
</ListView>