force-app/main/default/objects/DailyDispatch__c/listViews/Covid_Daily_Dispatched.listView-meta.xml
<ListView>
    <fullName>Covid_Daily_Dispatched</fullName>
    <columns>NAME</columns>
    <columns>RoundId__c</columns>
    <columns>RoundStartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>DriverId__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Default_Driver__c</columns>
    <columns>Default_Vehicle__c</columns>
    <columns>Round_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RoundId__c</field>
        <operation>contains</operation>
        <value>covid</value>
    </filters>
    <label>Covid Daily Dispatched</label>
</ListView>