force-app/main/default/objects/DailyDispatch__c/listViews/Daily_Dispatches.listView-meta.xml
<ListView>
    <fullName>Daily_Dispatches</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RoundId__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>Round_Duration__c</columns>
    <columns>Round_number__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Total_Tonnage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>12/25/2025 12:00 AM</value>
    </filters>
    <label>Daily Dispatches Created Today</label>
</ListView>