force-app/main/default/objects/DailyDispatch__c/listViews/Daily_Dispatches_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Daily_Dispatches_Last_7_Days</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>Default_Vehicle__c</columns>
    <columns>Vehicle__c</columns>
    <columns>DriverId__c</columns>
    <columns>Default_Driver__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Dispatch_Notes__c</columns>
    <columns>Dispatch_Delay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
    </filters>
    <label>Daily Dispatches Last 7 Days</label>
    <sharedTo>
        <role>Customer_Service_Officer</role>
        <role>Senior_Customer_Service_Office</role>
    </sharedTo>
</ListView>