force-app/main/default/objects/DailyDispatch__c/listViews/DDs_today_with_no_end_time.listView-meta.xml
<ListView>
    <fullName>DDs_today_with_no_end_time</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ops_End_Time__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>DDs today with end time</label>
</ListView>