force-app/main/default/objects/DailyDispatch__c/listViews/Loaders_and_Dispatches.listView-meta.xml
<ListView>
    <fullName>Loaders_and_Dispatches</fullName>
    <columns>NAME</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Num_Loaders__c</columns>
    <columns>Loader__c</columns>
    <columns>X2nd_Loader__c</columns>
    <columns>Dispatch_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dispatch_Date__c</field>
        <operation>equals</operation>
        <value>1/28/2025</value>
    </filters>
    <label>Loaders and Dispatches</label>
</ListView>