force-app/main/default/objects/DailyDispatch__c/listViews/Michal_daily.listView-meta.xml
<ListView>
    <fullName>Michal_daily</fullName>
    <columns>NAME</columns>
    <columns>RoundId__c</columns>
    <columns>Ops_Start_Time__c</columns>
    <columns>Ops_End_Time__c</columns>
    <columns>DriverId__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Default_Driver__c</columns>
    <columns>Default_Vehicle__c</columns>
    <columns>Round_Duration__c</columns>
    <columns>Already_Created__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/27/2022 12:00 AM</value>
    </filters>
    <label>Anton &amp; Michal daily</label>
</ListView>